--- a/app/src/main/res/layout/add_dress_layout.xml
+++ b/app/src/main/res/layout/add_dress_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -36,29 +37,35 @@
         android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="@color/black"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/imageViewDress"/>
+        android:background="@color/black"
+        app:layout_constraintTop_toBottomOf="@id/imageViewDress"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toBottomOf="@id/imageViewDress"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="275dp">
+        <!-- MODIFICARE LAYOUT BELOW -->
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/view"
-            android:layout_marginTop="10dp"
             android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            app:layout_constraintTop_toBottomOf="@id/view">
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="20dp">
 
             <Spinner
                 android:id="@+id/spinner"
                 android:layout_width="250dp"
-                android:layout_centerHorizontal="true"
                 android:layout_height="45dp"
-                android:textAlignment="center"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/add_dress_border"
                 android:entries="@array/type"
-                android:background="@drawable/add_dress_border"/>
+                android:textAlignment="center" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/inputViewMarca"
@@ -69,23 +76,21 @@
                 android:layout_marginTop="15dp"
                 app:endIconMode="clear_text"
                 app:errorEnabled="true"
-                app:startIconDrawable="@drawable/account_circle_48px2"
-                >
+                app:startIconDrawable="@drawable/account_circle_48px2">
 
                 <EditText
                     android:id="@+id/editTextBrand"
+                    style="@style/Widget.App.TextInputLayout"
                     android:layout_width="250dp"
                     android:layout_height="50dp"
+                    android:autofillHints="username"
                     android:background="@drawable/add_dress_border"
+                    android:fontFamily="@font/inter_semibold"
+                    android:hint="@string/brand"
                     android:inputType="text"
                     android:maxLength="20"
-                    android:hint="@string/brand"
-                    style="@style/Widget.App.TextInputLayout"
-                    android:fontFamily="@font/inter_semibold"
                     android:textStyle="bold|italic"
-                    tools:ignore="SpeakableTextPresentCheck"
-                    android:autofillHints="username"
-                    />
+                    tools:ignore="SpeakableTextPresentCheck" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -93,26 +98,25 @@
                 android:id="@+id/inputViewModello"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
                 android:layout_below="@id/inputViewMarca"
+                android:layout_centerHorizontal="true"
                 app:endIconMode="clear_text"
                 app:errorEnabled="true"
-                app:startIconDrawable="@drawable/account_circle_48px2"
-                >
+                app:startIconDrawable="@drawable/account_circle_48px2">
 
                 <EditText
                     android:id="@+id/editTextTemplate"
                     android:layout_width="250dp"
                     android:layout_height="50dp"
+                    android:autofillHints="username"
                     android:background="@drawable/add_dress_border"
+                    android:fontFamily="@font/inter_semibold"
+                    android:hint="@string/template"
                     android:inputType="text"
                     android:maxLength="20"
-                    android:hint="@string/template"
                     android:textColorHint="@color/black"
-                    android:fontFamily="@font/inter_semibold"
                     android:textStyle="bold|italic"
-                    tools:ignore="SpeakableTextPresentCheck"
-                    android:autofillHints="username"/>
+                    tools:ignore="SpeakableTextPresentCheck" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -124,22 +128,21 @@
                 android:layout_centerHorizontal="true"
                 app:endIconMode="clear_text"
                 app:errorEnabled="true"
-                app:startIconDrawable="@drawable/account_circle_48px2"
-                >
+                app:startIconDrawable="@drawable/account_circle_48px2">
 
                 <EditText
                     android:id="@+id/editTextColor"
                     android:layout_width="250dp"
                     android:layout_height="50dp"
+                    android:autofillHints="username"
                     android:background="@drawable/add_dress_border"
+                    android:fontFamily="@font/inter_semibold"
+                    android:hint="@string/color"
                     android:inputType="text"
                     android:maxLength="20"
-                    android:hint="@string/color"
                     android:textColorHint="@color/black"
-                    android:fontFamily="@font/inter_semibold"
                     android:textStyle="bold|italic"
-                    tools:ignore="SpeakableTextPresentCheck"
-                    android:autofillHints="username"/>
+                    tools:ignore="SpeakableTextPresentCheck" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -147,26 +150,25 @@
                 android:id="@+id/inputViewDescrizione"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/inputViewColore"
                 android:layout_centerHorizontal="true"
                 app:endIconMode="clear_text"
-                android:layout_below="@id/inputViewColore"
                 app:errorEnabled="true"
-                app:startIconDrawable="@drawable/account_circle_48px2"
-                >
+                app:startIconDrawable="@drawable/account_circle_48px2">
 
                 <EditText
                     android:id="@+id/editTextDescriprion"
                     android:layout_width="250dp"
                     android:layout_height="50dp"
+                    android:autofillHints="username"
                     android:background="@drawable/add_dress_border"
+                    android:fontFamily="@font/inter_semibold"
+                    android:hint="@string/description"
                     android:inputType="text"
                     android:maxLength="20"
-                    android:hint="@string/description"
                     android:textColorHint="@color/black"
-                    android:fontFamily="@font/inter_semibold"
                     android:textStyle="bold|italic"
-                    tools:ignore="SpeakableTextPresentCheck"
-                    android:autofillHints="username"/>
+                    tools:ignore="SpeakableTextPresentCheck" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -174,14 +176,15 @@
                 android:id="@+id/save"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/border_button"
                 android:layout_below="@id/inputViewDescrizione"
                 android:layout_centerHorizontal="true"
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/border_button"
                 android:text="@string/save"
                 android:textColor="@color/white"
-                android:layout_marginBottom="16dp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
         </RelativeLayout>
-    
+    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
