--- a/app/src/main/res/layout/edit_profile_layout.xml
+++ b/app/src/main/res/layout/edit_profile_layout.xml
@@ -113,6 +113,16 @@
         android:background="@color/black"
         />
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+    </ScrollView>
+
     <TextView
         android:id="@+id/nuovaEmail"
         android:layout_width="wrap_content"
