--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -24,12 +24,13 @@
         android:id="@+id/inputViewUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/clothual"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:endIconMode="clear_text"
         app:errorEnabled="true"
+        app:hintEnabled="false"
         app:startIconDrawable="@drawable/account_circle_48px2"
         >
 
@@ -40,8 +41,8 @@
             android:background="@drawable/border_edit_text"
             android:inputType="text"
             android:maxLength="20"
-            android:hint="@string/username"
-            android:textColorHint="@color/black"
+            android:hint="@string/email"
+            android:textColorHint="@color/grey"
             android:fontFamily="@font/inter_semibold"
             android:textStyle="bold|italic"
             tools:ignore="SpeakableTextPresentCheck"
@@ -59,6 +60,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:passwordToggleEnabled="true"
+        app:hintEnabled="false"
         app:startIconDrawable="@drawable/key_48px"
         >
 
@@ -70,7 +72,7 @@
             android:importantForAutofill="no"
             android:inputType="textPassword"
             android:maxLength="20"
-            android:textColorHint="@color/black"
+            android:textColorHint="@color/grey"
             android:hint="@string/password"
             android:fontFamily="@font/inter_semibold"
             android:textStyle="bold|italic"
@@ -83,7 +85,7 @@
         android:id="@+id/buttonLogin"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/border_button"
         android:text="@string/login"
         android:fontFamily="@font/inter_semibold"
@@ -131,12 +133,12 @@
 
         <TextView
             android:id="@+id/textview_or"
+            style="@style/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            style="@style/textView"
             android:text="@string/or" />
 
         <View
@@ -156,7 +158,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:linksClickable="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:text="@string/register"
         android:layout_below="@id/relative_layout"
         app:layout_constraintTop_toBottomOf="@id/relative_layout"
@@ -185,13 +187,13 @@
         app:layout_constraintTop_toBottomOf="@id/sign_in_button"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
         android:fontFamily="@font/cookie"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="25sp"
+        android:textSize="20sp"
         android:textStyle="italic" />
     
 </androidx.constraintlayout.widget.ConstraintLayout>
