--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -32,7 +32,7 @@
         android:layout_height="40dp"
         android:layout_below="@id/textName"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/border_button"
         android:text="@string/edit_profile"
@@ -52,45 +52,48 @@
         tools:ignore="TouchTargetSizeCheck" />
 
 
-
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/go_out"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="190dp"
-        android:orientation="vertical"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="60dp"
-        android:background="@drawable/menu_home_border">
+        android:layout_height="match_parent"
+        android:layout_below="@id/go_out">
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_marginTop="2dp"
-            android:orientation="horizontal">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/settings_48px"
-            android:background="@color/grey_persona_layout"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="10dp"
-            />
-        <TextView
-            android:id="@+id/settings"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/settings"
-            style="@style/textView"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
-            android:layout_marginStart="40dp"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:background="@color/grey_persona_layout"/>
-        </LinearLayout>
-        <!--
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="60dp"
+            android:background="@drawable/menu_home_border"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_marginTop="2dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/grey_persona_layout"
+                    android:src="@drawable/settings_48px" />
+
+                <TextView
+                    android:id="@+id/settings"
+                    style="@style/textView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="40dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/grey_persona_layout"
+                    android:text="@string/settings"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+            <!--
         <View
             android:layout_width="wrap_content"
             android:layout_height="1dp"
@@ -121,69 +124,74 @@
                 android:textStyle="bold"
                 android:background="@color/grey_persona_layout"/>
         </LinearLayout>-->
-        <View
-        android:layout_width="wrap_content"
-        android:layout_height="1dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginStart="60dp"
-        android:background="@color/black" />
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_marginTop="2dp"
-            android:orientation="horizontal">
-            <ImageView
+            <View
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/history_48px"
-                android:background="@color/grey_persona_layout"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="10dp"
-                />
-            <TextView
-                android:id="@+id/history"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="@string/history"
-                android:layout_marginTop="10dp"
-                style="@style/textView"
-                android:layout_marginStart="40dp"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:background="@color/grey_persona_layout"/>
-        </LinearLayout>
-        <View
-            android:layout_width="wrap_content"
-            android:layout_height="1dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginStart="60dp"
-            android:background="@color/black" />
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_marginTop="2dp"
-            android:orientation="horizontal">
-            <ImageView
+                android:layout_height="1dp"
+                android:layout_marginStart="60dp"
+                android:layout_marginTop="2dp"
+                android:background="@color/black" />
+
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/help_48px"
-                android:background="@color/grey_persona_layout"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="10dp"
-                />
-            <TextView
-                android:id="@+id/information"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="@string/information"
-                style="@style/textView"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="40dp"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:background="@color/grey_persona_layout"/>
-        </LinearLayout>
-        <!--
+                android:layout_height="50dp"
+                android:layout_marginTop="2dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/grey_persona_layout"
+                    android:src="@drawable/history_48px" />
+
+                <TextView
+                    android:id="@+id/history"
+                    style="@style/textView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="40dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/grey_persona_layout"
+                    android:text="@string/history"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="1dp"
+                android:layout_marginStart="60dp"
+                android:layout_marginTop="2dp"
+                android:background="@color/black" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_marginTop="2dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/grey_persona_layout"
+                    android:src="@drawable/help_48px" />
+
+                <TextView
+                    android:id="@+id/information"
+                    style="@style/textView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="40dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/grey_persona_layout"
+                    android:text="@string/information"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+            <!--
         <View
             android:layout_width="wrap_content"
             android:layout_height="1dp"
@@ -216,6 +224,7 @@
         </LinearLayout>-->
 
 
-    </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 
 </RelativeLayout>
