--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -43,6 +43,7 @@
                     android:inputType="text"
                     android:maxLength="100"
                     android:hint="@string/email"
+                    style="@style/textView"
                     android:background="@drawable/border_edit_text"
                     android:textColorHint="@color/grey"
                     android:textSize="20sp"
@@ -74,6 +75,7 @@
                     android:maxLength="100"
                     android:textColorHint="@color/grey"
                     android:hint="@string/surname"
+                    style="@style/textView"
                     android:fontFamily="@font/inter_semibold"
                     android:textStyle="bold|italic"
                     />
@@ -103,6 +105,7 @@
                     android:maxLength="100"
                     android:textColorHint="@color/grey"
                     android:hint="@string/name"
+                    style="@style/textView"
                     android:fontFamily="@font/inter_semibold"
                     android:textStyle="bold|italic"
                     />
@@ -130,6 +133,7 @@
                     android:maxLength="100"
                     android:textColorHint="@color/grey"
                     android:hint="@string/username"
+                    style="@style/textView"
                     android:fontFamily="@font/inter_semibold"
                     android:textStyle="bold|italic" />
 
@@ -155,6 +159,7 @@
                     android:inputType="textPassword"
                     android:maxLength="100"
                     android:hint="@string/password"
+                    style="@style/textView"
                     android:textColor="@color/grey"
                     android:fontFamily="@font/inter_semibold"
                     android:textStyle="bold|italic"
@@ -169,6 +174,7 @@
                 android:text="@string/already_an_user_login"
                 android:textColor="@color/black"
                 android:textSize="16sp"
+                style="@style/textView"
                 android:textAlignment="center"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="20dp"/>
@@ -179,6 +185,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:textAlignment="center"
+                style="@style/textView"
                 android:layout_marginEnd="20dp"
                 android:layout_marginTop="20dp"
                 android:layout_gravity="center_horizontal"/>
